--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainInventors.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainInventors.xhtml
@@ -7,25 +7,13 @@
 	xmlns:p="http://primefaces.org/ui">
 
 
-<ui:composition template="/WEB-INF/templates/default.xhtml">
+<ui:composition template="/template/template.xhtml">
 
 	<ui:define name="growl"></ui:define>
 
 	<ui:define name="content">
 
 		<h1>Principais Inventores</h1>
-
-		<h:panelGrid columns="1">
-			
-			<p:selectManyCheckbox>
-				<f:selectItem itemLabel="Classe" itemValue="Option 1" />
-				<f:selectItem itemLabel="Subclasse" itemValue="Option 2" />
-				<f:selectItem itemLabel="Grupo" itemValue="Option 3" />
-				<f:selectItem itemLabel="Subgrupo" itemValue="Option 4" />
-			</p:selectManyCheckbox>
-		
-		</h:panelGrid>
-		
 		<h:panelGrid columns="2">
 
 			<h:column>
@@ -35,13 +23,11 @@
 
 			<h:column>
 
-				<p:dataTable emptyMessage="Nenhuma classificacao cadastrada.">
+				<p:dataTable emptyMessage="Nenhum inventor cadastrado.">
 
-					<p:column headerText="Posição" />
+					<p:column headerText="#{msgs['year']}" />
 
-					<p:column headerText="Classificação" />
-
-					<p:column headerText="Numero de Documentos" />
+					<p:column headerText="#{msgs['documents.number']}" />
 
 				</p:dataTable>
 			</h:column>
