--- a/periscope-web/src/main/webapp/pages/project/report/profint/profint.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/profint/profint.xhtml
@@ -1,19 +1,26 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 
 
-<ui:composition template="/WEB-INF/templates/default.xhtml">
+<ui:composition template="/template/template.xhtml">
 
 	<ui:define name="growl"></ui:define>
 
-	<ui:define name="content">
+	<ui:define name="content">	
+	<h:form  >
 
-		<h1>Principais Depositantes</h1>
+		<h1>Data de Deposito / #{msgs['year']}</h1>
+		Language : 
+		<h:selectOneMenu value="#{language.localeCode}" onchange="submit()" 
+			valueChangeListener="#{language.localeCodeChanged}" >
+   			<f:selectItems value="#{language.locales}"  /> 
+   		</h:selectOneMenu>
+ 
 		<h:panelGrid columns="2">
 
 			<h:column>
@@ -22,24 +29,17 @@
 			</h:column>
 
 			<h:column>
-
 				<p:dataTable emptyMessage="Nenhum depositante cadastrado.">
 
-					<p:column headerText="Ano" />
+					<p:column headerText="#{msgs['year']}" />
 
-					<p:column headerText="Numero de Documentos" />
+					<p:column headerText="#{msgs['documents.number']}" />
 
 				</p:dataTable>
-
-
-				<p:panel header="Filtro" toggleable="true">
-
-				</p:panel>
-
 			</h:column>
 
 		</h:panelGrid>
-
+</h:form>
 	</ui:define>
 
 </ui:composition>
