--- a/periscope-web/src/main/webapp/pages/user/editUser.xhtml
+++ b/periscope-web/src/main/webapp/pages/user/editUser.xhtml
@@ -8,7 +8,7 @@
 
 <ui:composition template="/template/templateProject.xhtml">
 
-	<ui:define name="content">
+	<ui:define name="content">	
 		<center>
 			<h:panelGroup rendered="#{not userController.editing}">
 				<h1>Novo Usuário</h1>
@@ -18,6 +18,7 @@
 			</h:panelGroup>
 			<br/>
 			<h:form>
+				<p:messages globalOnly="true" autoUpdate="true"/>
 				<h:panelGrid columns="6" cellpadding="10">
 				
 					<h:outputLabel id="lblFirstName" for="txtFirstName" value="Nome *" style="font-weight:bold"/>				
@@ -47,7 +48,8 @@
 					<p:message for="txtEmail"/>
 					
 					<h:outputLabel id="lblLevel" value="Nível de Usuário " style="font-weight:bold"/>				
-					<p:selectOneMenu id="cmbLevel" value="#{userController.user.userLevel}">
+					<h:outputLabel value="#{userController.user.userLevel}" rendered="#{(userController.editing and not admin) or userController.user.id.toString() == currentUser.id.toString()}"/>
+					<p:selectOneMenu id="cmbLevel" value="#{userController.user.userLevel}" rendered="#{(not userController.editing or admin) and userController.user.id.toString() != currentUser.id.toString()}">
 						<f:selectItems value="#{userController.levels}" />					
 					</p:selectOneMenu>
 					<p:messages for="cmbLevel"/>							
@@ -65,6 +67,7 @@
 				</h:panelGrid>	
 			</h:form>
 		</center>
+		
 	</ui:define>
 
 </ui:composition>
