--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainClassification.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainClassification.xhtml
@@ -13,10 +13,13 @@
 
 	<ui:define name="content">
 
-		<h1>Data de Prioridade</h1>
+		<h1>Principais Depositantes</h1>
 		<h:panelGrid columns="2">
 
 			<h:column>
+				<p:tagCloud model="">
+				
+				</p:tagCloud>
 				<p:graphicImage />
 				<p:graphicImage />
 			</h:column>
