--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainIPC.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainIPC.xhtml
@@ -13,40 +13,72 @@
 
 	<ui:define name="content">
 
-		<h1>Principais Inventores</h1>
+		<h1>Principais Classificações</h1>
 
-		<h:panelGrid columns="1">
-			
-			<p:selectManyCheckbox>
-				<f:selectItem itemLabel="#{msgs['class']}" itemValue="Option 1" />
-				<f:selectItem itemLabel="#{msgs['subclass']}" itemValue="Option 2" />
-				<f:selectItem itemLabel="#{msgs['group']}" itemValue="Option 3" />
-				<f:selectItem itemLabel="#{msgs['subgroup']}" itemValue="Option 4" />
-			</p:selectManyCheckbox>
-		
-		</h:panelGrid>
-		
-		<h:panelGrid columns="2">
+		<h:form prependId="false">
 
-			<h:column>
-				<p:graphicImage />
-				<p:graphicImage />
-			</h:column>
+			<h:panelGrid columns="4">
 
-			<h:column>
+				<p:selectBooleanCheckbox id="klass" itemLabel="#{msgs['class']}"
+					value="#{mainIPCController.klass}">
+					<p:ajax update="subKlass,group,subGroup,horizontal" listener="#{mainIPCController.update()}"/>
+				</p:selectBooleanCheckbox>
 
-				<p:dataTable emptyMessage="Nenhuma classificacao cadastrada.">
+				<p:selectBooleanCheckbox id="subKlass"
+					disabled="#{!mainIPCController.klass}"
+					itemLabel="#{msgs['subclass']}"
+					value="#{mainIPCController.subKlass}">
+					<p:ajax update="group,subGroup,horizontal" listener="#{mainIPCController.update()}"/>
+				</p:selectBooleanCheckbox>
 
-					<p:column headerText="#{msgs['position']}" />
+				<p:selectBooleanCheckbox id="group"
+					disabled="#{!mainIPCController.klass or !mainIPCController.subKlass}"
+					itemLabel="#{msgs['group']}" value="#{mainIPCController.group}">
+					<p:ajax update="subGroup,horizontal" listener="#{mainIPCController.update()}"/>
+				</p:selectBooleanCheckbox>
 
-					<p:column headerText="#{msgs['classification']}" />
+				<p:selectBooleanCheckbox id="subGroup"
+					disabled="#{!mainIPCController.klass or !mainIPCController.subKlass or !mainIPCController.group}"
+					itemLabel="#{msgs['subgroup']}"
+					value="#{mainIPCController.subGroup}">
+					<p:ajax update="horizontal" listener="#{mainIPCController.update()}"/>
+				</p:selectBooleanCheckbox>
 
-					<p:column headerText="#{msgs['documents.number']}" />
+			</h:panelGrid>
 
-				</p:dataTable>
-			</h:column>
+			<p:barChart id="horizontal" value="#{mainIPCController.model}"
+				orientation="horizontal" legendPosition="e" datatipFormat="%s"
+				title="Número de depositos por Inventores" style="height:300px" />
 
-		</h:panelGrid>
+			<h:panelGrid columns="2">
+
+				<h:column>
+					<p:graphicImage />
+					<p:graphicImage />
+				</h:column>
+
+				<h:column>
+
+					<p:dataTable emptyMessage="Nenhuma classificacao cadastrada."
+						var="ipc" value="#{mainIPCController.pairs}">
+
+						<!-- 					<p:column headerText="#{msgs['position']}" > -->
+						<!-- 						<h:outputText value="ipc." /> -->
+						<!-- 					</p:column> -->
+
+						<p:column headerText="#{msgs['classification']}">
+							<h:outputText value="#{ipc.key}" />
+						</p:column>
+
+						<p:column headerText="#{msgs['documents.number']}">
+							<h:outputText value="#{ipc.value}" />
+						</p:column>
+
+					</p:dataTable>
+				</h:column>
+
+			</h:panelGrid>
+		</h:form>
 
 	</ui:define>
 
