--- a/periscope-web/src/main/webapp/index.html
+++ b/periscope-web/src/main/webapp/index.html
@@ -2,6 +2,6 @@
 
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; URL=index.jsf">
+<meta http-equiv="Refresh" content="0; URL=pages/project/projectList.jsf">
 </head>
 </html>
