Correções e mudanças em MainApplicant.xhtml e MainInventor.xhtml. Menssagem de erro ao enviar um arquivo errado.

--- a/periscope-web/src/main/webapp/pages/project/report/allReports/applicantDate.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/applicantDate.xhtml
@@ -28,7 +28,8 @@
 				</h:column>
 
 				<h:column>
-					<p:dataTable emptyMessage="Nenhum depositante cadastrado." var="pair" value="#{applicantDateReport.pairs}">
+                                    <p:dataTable emptyMessage="Nenhum depositante cadastrado." var="pair" value="#{applicantDateReport.pairs}"
+                                                 >
 
 						<p:column headerText="#{msgs['year']}">
 							<h:outputText value="#{pair.key}" />
