--- a/periscope-web/src/main/webapp/login.xhtml
+++ b/periscope-web/src/main/webapp/login.xhtml
@@ -49,8 +49,8 @@
 			<p:panelGrid columns="1" style="padding:0px;margin:0px;font-size:70%">															
 					
 				<h3>Usuário de teste para o sistema</h3>
-				<p>Login  : <b>teste</b></p>				
-				<p>Senha : <b>teste123456</b></p>				
+				<p>Login  : <b>admin</b></p>				
+				<p>Senha : <b>123456</b></p>				
 								
 			</p:panelGrid>
 		</center>
