--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainApplicant.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainApplicant.xhtml
@@ -13,21 +13,34 @@
 
 	<ui:define name="content">
 
-		<h:form id="chart">
+            <h:form styleClass="container">
 
 			<br />
 			<center>
 				<h4>Número de Depositantes</h4>
 				<p:spinner value="#{report.limit}" min="5" max="20"
 					style="padding:0 20px 0 0">
-					<p:ajax listener="#{report.mainApplicantChart()}" update="@form" />
+					<p:ajax listener="#{report.mainApplicantChart()}" update="@form"  />
 				</p:spinner>
 			</center>
 			<br />
 			<p:barChart id="horizontal" value="#{report.model}"
 				legendPosition="se" title="Principais Depositantes"
 				orientation="horizontal" style="height:300px" datatipFormat="%s" />
+                        <p:dataTable id="applicants"
+				emptyMessage="Nenhum depositante cadastrado." var="pair"
+				value="#{report.pairs}" style="height:300px">
 
+				<p:column headerText="Nome">
+					<h:outputText value="#{pair.key}" />
+				</p:column>
+
+				<p:column headerText="#{msgs['documents.number']}">
+					<h:outputText value="#{pair.value}" />
+				</p:column>
+
+			</p:dataTable>
+                        
 		</h:form>
 	</ui:define>
 
